src/objects/Vaca__c.object
<CustomObject>
    <description>Vacas que se manejan en el campo.</description>
    <fields>
        <fullName>Caravana_Blanca__c</fullName>
        <description>Nro de caravana blanca (de uso interno)</description>
        <label>Caravana Blanca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>En_pre_parto__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Secado de la vaca</inlineHelpText>
        <label>En pre-parto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>En_tambo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>La vaca esta en ordeñe si esta opción está marcada.</description>
        <label>En tambo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enferma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enferma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Nacimiento__c</fullName>
        <label>Fecha de Nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Muerta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Se va a tickear esta box cuando la vaca fallece.</description>
        <label>Muerta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nro_de_Vaca__c</fullName>
        <description>Identificación de la vaca.</description>
        <label>Nro de Vaca</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preniada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preñada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Raza__c</fullName>
        <label>Raza</label>
        <picklist>
            <picklistValues>
                <fullName>Holando</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Vaca</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vaquillona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ternera</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trazabilidad__c</fullName>
        <description>Caravana del ministerio</description>
        <inlineHelpText>Trazabilidad para el MGAP</inlineHelpText>
        <label>Trazabilidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendida__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Esta opción será seleccionada cuando la vaca se vendió.</description>
        <label>Vendida</label>
        <type>Checkbox</type>
    </fields>
    <label>Vaca</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Caravana_Blanca__c</columns>
        <columns>Nro_de_Vaca__c</columns>
        <columns>En_tambo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vaca Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>